--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -24,6 +24,7 @@
 	"rules": {
 		"no-case-declarations": "off",
 		"react/no-unescaped-entities": "off",
+		"require-yield": "off",
 		"@typescript-eslint/no-explicit-any": "off",
 		"@typescript-eslint/ban-ts-comment": "off",
 		"@typescript-eslint/no-unused-vars": [
